--- a/src/main/resources/templates/datospersonales.html
+++ b/src/main/resources/templates/datospersonales.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" xmlns:th="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Datos personales</title>
     <link type="text/css" rel="stylesheet" th:href="@{/styles/estilosBasicos.css}" />
 </head>
 <body>
-<form id="datos-personales" action="datos1" method="post" th:object="${sesion}">
+<form id="datos-personales" action="datos1" method="post" th:object="${datos}">
     <fieldset>
         <legend th:text="#{datosPersonales}"/>
     <label class="titulo" th:text="#{etiqueta_nombre}+':'"/>
-    <input type="text" id="usuario" name="usuario" />
+    <input type="text" th:field="*{nombre}"/>
 
-   <!-- <th:block th:each="error : ${#fields.errors('nombre')}">
+    <th:block th:each="error : ${#fields.errors('nombre')}">
         <div th:text="${error}" class="error"/>
-    </th:block>-->
+    </th:block>
 
     <label class="titulo" th:text="#{etiqueta_apellidos}+':'"/>
-    <input type="text" id="clave" name="usuario" />
+    <input type="text" th:field="*{apellidos}" />
     <br />
     <!-- <th:block th:each="error : ${#fields.errors('nombre')}">
          <div th:text="${error}" class="error"/>
