--- a/src/main/resources/templates/fragmentos/navbar.html
+++ b/src/main/resources/templates/fragmentos/navbar.html
@@ -2,5 +2,6 @@
     <a th:href="@{/datos1}"><img src="/img/datos1-selected.png" alt="Datos Personales" style="width: 50px; height: 50px;"></a>
     <a th:href="@{/datos2}"><img src="/img/datos2-selected.png" alt="Datos Profesionales" style="width: 50px; height: 50px;"></a>
     <a th:href="@{/datos3}"><img src="/img/datos3-selected.png" alt="Datos Bancarios" style="width: 50px; height: 50px;"></a>
-    <a th:href="@{/resumen}"><img src="/img/resumen-selected.png" alt="Resumen" style="width: 50px; height: 50px;"></a></div>
+    <a th:href="@{/resumen}"><img src="/img/resumen-selected.png" alt="Resumen" style="width: 50px; height: 50px;"></a>
+    <a th:href="@{/inicio-sesion}" class="inicioSesion"><img src="/img/InicioSesion.png" th:alt="#{etiqueta-inicioSesion}" style="width: 50px; height: 50px;"></a>
 </nav>
