--- a/src/main/resources/templates/resumen.html
+++ b/src/main/resources/templates/resumen.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div th:insert="~{fragmentos/navbar}"></div>
+<p th:text="*{mensaje}"></p>
 <form method="post" th:object="${datosUsuario}">
     <fieldset>
         <legend th:text="#{datosUsuario}"/>
