--- a/src/main/resources/templates/fragmentos/navbar.html
+++ b/src/main/resources/templates/fragmentos/navbar.html
@@ -1,7 +1,7 @@
 <nav>
-    <a th:href="@{/datos1}"><img src="/img/datos1-selected.png" alt="Datos Personales" style="width: 50px; height: 50px;"></a>
-    <a th:href="@{/datos2}"><img src="/img/datos2-selected.png" alt="Datos Profesionales" style="width: 50px; height: 50px;"></a>
-    <a th:href="@{/datos3}"><img src="/img/datos3-selected.png" alt="Datos Bancarios" style="width: 50px; height: 50px;"></a>
-    <a th:href="@{/resumen}"><img src="/img/resumen-selected.png" alt="Resumen" style="width: 50px; height: 50px;"></a>
-    <a th:href="@{/inicio-sesion}" class="inicioSesion"><img src="/img/InicioSesion.png" th:alt="#{etiqueta-inicioSesion}" style="width: 50px; height: 50px;"></a>
+    <a th:href="@{/datos1}" class="bardatos"><img src="/img/datos1-selected.png" alt="Datos Personales" style="width: 50px; height: 50px;"></a>
+    <a th:href="@{/datos2}" class="bardatos"><img src="/img/datos2-selected.png" alt="Datos Profesionales" style="width: 50px; height: 50px;"></a>
+    <a th:href="@{/datos3}" class="bardatos"><img src="/img/datos3-selected.png" alt="Datos Bancarios" style="width: 50px; height: 50px;"></a>
+    <a th:href="@{/resumen}" class="bardatos" ><img src="/img/resumen-selected.png" alt="Resumen" style="width: 50px; height: 50px;"></a>
+    <a th:href="@{/paso1}" class="inicioSesion"><img src="/img/InicioSesion.png" th:alt="#{etiqueta-inicioSesion}" style="width: 50px; height: 50px;"></a>
 </nav>
