--- a/src/main/resources/templates/inicio-clave.html
+++ b/src/main/resources/templates/inicio-clave.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Introduce contraseña</title>
+    <link type="text/css" rel="stylesheet" th:href="@{/styles/estilosInicio.css}" />
 </head>
 <body>
-
+<div th:insert="~{fragmentos/navbar}"></div>
+<h1 th:text="#{etiqueta_Autenticacion}"></h1>
+<form id="cuenta" action="paso2" method="post">
+    <label class="titulo" th:text="#{etiqueta_clave}+':'"/>
+    <input type="password" id="clave" name="clave"/>
+    <input type="submit" th:value="#{etiqueta_inicioSesion}">
+    </br>
+    <div class="error"><th:block th:text="${mensaje}" /></div>
+</form>
 </body>
 </html>
