--- a/src/main/resources/templates/inicio-completado.html
+++ b/src/main/resources/templates/inicio-completado.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Área Personal</title>
+    <title>Área Personal de *{usuario}</title>
 </head>
 <body>
     <h1 th:text="#{etiqueta_areaPersonal}"></h1>
+<p th:text="'Hola ' + *{tratamientoSeleccionado} + '. ' + *{apellidos} +'Veces que has iniciado: ' + *{iteracion}"></p>
 </body>
 </html>
